[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/menu.gd" type="Script" id=1]
[ext_resource path="res://assets/theme.theme" type="Theme" id=2]
[ext_resource path="res://scripts/border.gd" type="Script" id=3]

[node name="Viewport" type="MarginContainer"]
anchor_left = 0.00078125
anchor_top = 0.00138889
anchor_right = 1.00078
anchor_bottom = 1.00139
theme = ExtResource( 2 )
custom_constants/margin_right = 40
custom_constants/margin_top = 30
custom_constants/margin_left = 40
custom_constants/margin_bottom = 30

[node name="MainMenu" type="VBoxContainer" parent="."]
margin_left = 40.0
margin_top = 30.0
margin_right = 1239.0
margin_bottom = 690.0
script = ExtResource( 1 )

[node name="Title" type="Label" parent="MainMenu"]
margin_right = 1199.0
margin_bottom = 19.0
text = "Algorithm Simulator"
uppercase = true

[node name="Display" type="MarginContainer" parent="MainMenu"]
margin_top = 27.0
margin_right = 1199.0
margin_bottom = 625.0
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionsContainer" type="MarginContainer" parent="MainMenu/Display"]
visible = false
margin_left = 20.0
margin_top = 195.0
margin_right = 1179.0
margin_bottom = 403.0
size_flags_vertical = 4
script = ExtResource( 3 )

[node name="Instructions" type="VBoxContainer" parent="MainMenu/Display/InstructionsContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1139.0
margin_bottom = 188.0
custom_constants/separation = 16

[node name="GitHub" type="Button" parent="MainMenu/Display/InstructionsContainer/Instructions"]
margin_right = 1119.0
margin_bottom = 19.0
text = "Fork me on GitHub!"

[node name="Label" type="Label" parent="MainMenu/Display/InstructionsContainer/Instructions"]
margin_top = 35.0
margin_right = 1119.0
margin_bottom = 98.0
text = "Algorithm Simulator is designed to be played with mouse and keyboard. However, you can play with just a keyboard with arrow key navigation. You may also play without a keyboard by clicking or tapping on buttons and the left/right side of the screen instead of the left/right arrow keys."
autowrap = true

[node name="Music" type="Button" parent="MainMenu/Display/InstructionsContainer/Instructions"]
margin_bottom = 19.0
text = "Toggle Music!"

[node name="Button" type="Button" parent="MainMenu/Display/InstructionsContainer/Instructions"]
margin_top = 114.0
margin_right = 1119.0
margin_bottom = 133.0
text = "OK"

[node name="Spacing" type="Control" parent="MainMenu"]
margin_top = 633.0
margin_right = 1199.0
margin_bottom = 633.0

[node name="Buttons" type="HBoxContainer" parent="MainMenu"]
margin_left = 19.0
margin_top = 641.0
margin_right = 1179.0
margin_bottom = 660.0
size_flags_horizontal = 4
custom_constants/separation = 500

[node name="Help" type="Button" parent="MainMenu/Buttons"]
margin_right = 40.0
margin_bottom = 19.0
text = "HELP"

[node name="Start" type="Button" parent="MainMenu/Buttons"]
margin_left = 540.0
margin_right = 590.0
margin_bottom = 19.0
size_flags_horizontal = 4
text = "START"
flat = true

[node name="Credits" type="Button" parent="MainMenu/Buttons"]
margin_left = 1090.0
margin_right = 1160.0
margin_bottom = 19.0
text = "CREDITS"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[connection signal="pressed" from="MainMenu/Display/InstructionsContainer/Instructions/GitHub" to="MainMenu" method="_on_GitHub_pressed"]
[connection signal="pressed" from="MainMenu/Display/InstructionsContainer/Instructions/Music" to="MainMenu" method="_on_Music_pressed"]
[connection signal="pressed" from="MainMenu/Display/InstructionsContainer/Instructions/Button" to="MainMenu" method="_on_Button_pressed"]
[connection signal="pressed" from="MainMenu/Buttons/Help" to="MainMenu" method="_on_Help_pressed"]
[connection signal="pressed" from="MainMenu/Buttons/Start" to="MainMenu" method="_on_Start_pressed"]
[connection signal="pressed" from="MainMenu/Buttons/Credits" to="MainMenu" method="_on_Credits_pressed"]
[connection signal="timeout" from="Timer" to="MainMenu" method="_on_Timer_timeout"]
